# godot-minigame

./: LICENSE  README.md  adapt-minigame.js
godot-sdk/: README.md
godot-sdk/gdscript/: minigame_sdk.gd
godot-sdk/godotjs/: README.md  minigame_sdk.ts
godot-sdk/modules/minigame_sdk/: SCsub  config.py  minigame_sdk.cpp  minigame_sdk.h  register_types.cpp  register_types.h
godot-sdk/modules/minigame_sdk/js/: library_godot_minigame.js
packer/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
packer/src/: App.vue  styles.css
packer/src-tauri/: Cargo.toml  tauri.conf.json
packer/src-tauri/capabilities/: default.json
packer/src-tauri/icons/: icon.icns
packer/src-tauri/src/: adapt.rs  lib.rs  main.rs
templates/: adapter.js  audio-compat.js  game.js  loader.js
templates/worker/: position_reporting.js
tiktok-templates/: fetch.js  game.json  image_loader.js  loader.js
wechat-templates/: game.js  game.json  minigame-sdk.js  wxfs-adapter.js
