[package]
name = "godot-minigame-packer"
version = "0.1.0"
description = "Godot Web export → WeChat/Douyin mini-game packer"
authors = ["you"]
edition = "2021"

# The library is what actually contains the app logic; main.rs is a thin shim.
[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-embed = "8"
brotli = "6"

[profile.release]
# Smaller, self-contained single-file executable.
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
